--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "^5.0",
-        "mockery/mockery": "0.9.4"
+        "mockery/mockery": "0.9.4",
+        "phpdocumentor/phpdocumentor": "2.*"
     }
 }
