--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,25 @@
 {
     "name": "grzgajda/comicvine-api",
-    "description": "PHP package for ComicVine API",
+    "description": "PHP class wrapper providing a simple and flexible methods to using ComicVine API.",
+    "keywords": [
+        "comics",
+        "comicbooks",
+        "comicvine",
+        "comicvine-api",
+        "grzegorz gajda"
+    ],
+    "time": "2015-11-10",
     "license": "MIT",
+    "version": "1.0.0",
     "authors": [
         {
             "name": "grz-gajda",
+            "email": "grz.gajda@outlook.com",
+            "role": "Developer"
+        }
+    ],
+    "support": [
+        {
             "email": "grz.gajda@outlook.com"
         }
     ],
@@ -16,7 +31,7 @@
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "^5.0",
-        "mockery/mockery": "0.9.4",
-        "phpdocumentor/phpdocumentor": "2.*"
-    }
+        "mockery/mockery": "0.9.4"
+    },
+    "minimum-stability": "stable"
 }
