--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "require": {},
     "require-dev": {
-        "phpunit/phpunit": "^5.0",
+        "phpunit/phpunit": "4.8.16",
         "mockery/mockery": "0.9.4"
     },
     "minimum-stability": "stable"
