--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,11 @@
             "ComicVine\\": "src/"
         }
     },
-    "require": {},
+    "require": {
+        "guzzlehttp/guzzle": "^6.1.0"
+    },
     "require-dev": {
-        "phpunit/phpunit": "4.8.16",
+        "phpunit/phpunit": "4.8.*",
         "mockery/mockery": "0.9.4"
     },
     "minimum-stability": "stable"
