Added tests (97% code coverage), added more exceptions. Fixed building url for ControllerQuery class.

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,11 @@
             "ComicVine\\": "src/"
         }
     },
+    "autoload-dev": {
+        "classmap": [
+            "tests/TestCase.php"
+        ]
+    },
     "require": {
         "guzzlehttp/guzzle": "^6.1.0"
     },
