--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
 language: php
 
 php:
+  - 5.4
+  - 5.5
   - 5.6
+  - 7.0
   - hhvm
 
 before_script:
   - composer self-update
   - composer install
+  - composer dumpautoload
+  - vendor/bin/phpunit
+
+notitifications:
+  email: false
