--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "time": "2015-11-10",
     "license": "MIT",
-    "version": "v1.1.0",
+    "version": "v1.1.1",
     "authors": [
         {
             "name": "grz-gajda",
@@ -32,11 +32,11 @@
         ]
     },
     "require": {
-        "guzzlehttp/guzzle": "^6.1.0"
+        "guzzlehttp/guzzle": "^5.3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
-        "mockery/mockery": "0.9.4"
+        "mockery/mockery": "^0.9.4"
     },
     "minimum-stability": "stable"
 }
