--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         ]
     },
     "require": {
-        "guzzlehttp/guzzle": "^5.3.0"
+        "guzzlehttp/guzzle": "5.3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
