--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.4
   - 5.5
   - 5.6
   - 7.0
@@ -9,9 +8,13 @@ php:
 
 before_script:
   - composer self-update
-  - composer install
+  - composer install --dev
+  - composer require satooshi/php-coveralls
   - composer dumpautoload
-  - vendor/bin/phpunit
 
-notitifications:
-  email: false
+script:
+  - mkdir -p build/logs
+  - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+
+after_script:
+  - php vendor/bin/coveralls
