--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,7 @@
         ]
     },
     "require": {
-        "php": "^5.5 || ^7.0",
-        "guzzlehttp/guzzle": "5.3.0"
+        "guzzlehttp/guzzle": "^6.1"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
